--- a/styles/less/header.less
+++ b/styles/less/header.less
@@ -24,19 +24,21 @@
   margin: 2px 24px;
   width: 85px;
   background-size: 100%;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  max-width: @viewport_width;
-  padding: 0;
-  width: 100%;
 
   @media @small-screen {
     display: none;
   }
+}
+
+.navbar {
+  border: 0;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  max-width: @viewport_width;
+  min-height: auto;
+  padding: 0;
+  width: 100%;
 }
 
 .main-nav {
@@ -45,55 +47,125 @@
   max-width: 800px;
 }
 
-.main-nav-menu {
+
+.mobile-main-nav {
+  display: none;
+
+  @media @small-screen {
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%
+  }
+}
+
+.mobile-dropdown-menu {
+  background-color: @c_grays_00;
+  border: 0;
+  border-radius: 0;
+  box-shadow: none;
+  left: inherit;
+  margin: 0;
+  right: 0;
+  text-transform: capitalize;
+  width: 90%;
+}
+
+.nav-menu-button {
+  color: @c_white;
+  font-size: 14px;
+  line-height: 12px;
+  margin: 12px;
+
+  &:active, &:visited, &:focus, &:hover {
+    color: @c_white;
+  }
+}
+
+.desktop-main-nav {
+  align-items: stretch;
   display: flex;
-  justify-content: space-between;
   margin: 0 36px;
   width: 100%;
 
-  .menu-item {
-    display: inline-flex;
-    align-items: center;
-    font-size: 14px;
-    line-height: 22px;
-    text-transform: uppercase;
-    transition: 0.5s;
+  @media @small-screen {
+    display: none;
+  }
+}
 
-    &.dropdown {
+.desktop-dropdown-menu {
+  margin-top: 0;
+  padding: 0;
+  text-transform: none;
+
+  li {
+    a {
+      line-height: 34px;
+
       &:hover {
-        .dropdown-menu {
-          display: block;
-        }
+        background-color: @c_blue_01;
+        color: @c_white;
       }
-
-      .dropdown-menu {
-        padding: 0;
-        text-transform: none;
-
-        li {
-          a {
-            line-height: 34px;
-            
-            &:hover {
-              background-color: @c_blue_01;
-              color: @c_white;
-            }
-          }
-        }
-      }
-    }
-
-    .icon-arrow-down {
-      font-size: 8px;
-      margin-left: 6px;
     }
   }
+}
+
+.main-nav-menu {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.menu-item {
+  display: inline-flex;
+  align-items: center;
+  font-size: 14px;
+  line-height: 22px;
+  text-transform: uppercase;
+  transition: 0.5s;
+
+  @media @small-screen {
+    display: block;
+    text-transform: capitalize;
+    padding: 4px;
+  }
+
+  &:hover {
+    color: @c_orange_01;
+  }
+
+  &.dropdown {
+    &:hover {
+      .desktop-dropdown-menu {
+        display: block;
+      }
+    }
+  }
+}
+
+.submenu-item {
+  color: @c_grays_03;
+  display: block;
+  font-size: 14px;
+  padding: 4px;
+  text-align: right;
+
+  a {
+    padding: 6px 12px;
+  }
+}
+
+.icon-arrow-down {
+  font-size: 8px;
+  margin-left: 6px;
 }
 
 .nav-button {
   line-height: 50px;
 
-  &:hover {
-    color: @c_orange_01;
+  @media @small-screen {
+    font-size: 18px;
+    padding: 18px;
+    text-align: right;
   }
 }
