--- a/styles/less/history.less
+++ b/styles/less/history.less
@@ -1,4 +1,5 @@
 @import 'images.less';
+@import 'blocks.less';
 
 .history-section-header {
   background-image: @history-header;
@@ -14,6 +15,11 @@
 .history-section-header-title {
   color: @c_white;
   text-transform: uppercase;
+
+  @media @small-screen {
+    align-self: flex-end;
+    margin: 24px;
+  }
 }
 
 .history-section-content {
@@ -57,6 +63,11 @@
   height: 500px;
   position: relative;
   margin: 48px 0;
+
+  @media @small-screen {
+    height: auto;
+    margin: 0;
+  }
 }
 
 .history-section-image {
@@ -65,6 +76,13 @@
   height: 300px;
   position: absolute;
   width: 100%;
+
+  @media @small-screen {
+    background-size: cover;
+    height: 200px;
+    position: static;
+    margin: 12px 0;
+  }
 
   &:nth-child(1) {
     background-image: @history-image-1;
