--- a/styles/less/modal.less
+++ b/styles/less/modal.less
@@ -137,6 +137,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding: 6px;
 }
 
 .inspiration-modal-color-box {
@@ -147,12 +148,20 @@
   padding: 12px;
   max-width: 200px;
   min-width: 100px;
+
+  @media @small-screen {
+    max-width: 100%;
+  }
 }
 
 .inspiration-modal-color-box-sample {
   width: 100%;
   height: 150px;
   border: 1px solid @c_grays_03;
+
+  @media @small-screen {
+    height: 80px;
+  }
 
   &.blue {
     background-color: #2a90e2;
