liter calculator result fix

--- a/app/views/liter-calculator.html
+++ b/app/views/liter-calculator.html
@@ -58,7 +58,7 @@
         <div class="liter-calculator-result-content">
           <div class="liter-calculator-text">
             <span>Usted necesita</span>
-            <span class="liter-calculator-result-number">{{ result | number }}</span>
+            <span class="liter-calculator-result-number">{{ result | number:2 }}</span>
             <span>litros de pintura.</span>
           </div>
 
