ui-router implementation

--- a/app/views/product-show.html
+++ b/app/views/product-show.html
@@ -119,7 +119,7 @@
 
             <div class="product-extra-info-item">
               <div class="liter-calculator-button-wrapper">
-                <a ng-click="showLiterCalculatorSection()" class="liter-calculator-button">
+                <a ui-sref="literCalculator" class="liter-calculator-button">
                   <i class="icon-calculadora"></i>
                   <span class="liter-calculator-label">calculador de litros</span>
                 </a>
