--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -7,11 +7,12 @@ section {
 }
 
 .home-wrapper {
-  position: relative;
   height: 100%;
-
+  padding-top: 54px;
+  position: relative;
 
   @media @small-screen {
+    padding-top: 38px;
     top: 0;
   }
 }
