--- a/app/views/social.html
+++ b/app/views/social.html
@@ -1,7 +1,7 @@
 <div class="social-section-content">
   <div class="main-section-header">
     <div class="layout">
-      <h2 class="social-section-header-title">VISION (Resposabilidad Social)</h2>
+      <h2 class="social-section-header-title">Resposabilidad Social</h2>
       <div class="social-section-header-pots-image"></div>
     </div>
   </div>
