--- a/styles/less/liter-calculator.less
+++ b/styles/less/liter-calculator.less
@@ -114,6 +114,7 @@
 .liter-calculator-button-wrapper {
   display: flex;
   justify-content: flex-end;
+  margin: 12px 0;
   width: 100%;
 
   @media @small-screen {
