--- a/app/views/product-show.html
+++ b/app/views/product-show.html
@@ -117,13 +117,29 @@
               </div>
             </div>
 
-            <div class="product-extra-info-item">
+            <div class="product-extra-info-item" ng-show="showButtons()">
               <div class="liter-calculator-button-wrapper">
                 <a ui-sref="literCalculator" class="liter-calculator-button">
                   <i class="icon-calculadora"></i>
                   <span class="liter-calculator-label">calculador de litros</span>
                 </a>
               </div>
+              <div class="liter-calculator-button-wrapper">
+                <a ng-click="openAdviceModal(1);" class="liter-calculator-button">
+                  <i class="icon-consejo"></i>
+                  <span class="liter-calculator-label">consejos</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="product-photos-section" ng-show="showPhotosSection()">
+        <div class="layout">
+          <div class="product-photos-wrapper">
+            <div ng-repeat="photo in product.fotos" class="product-photo">
+              <img class="product-photo-image" ng-src="{{ photo.fields.file.url }}" alt="{{ photo.fields.title }}">
             </div>
           </div>
         </div>
