--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -28,12 +28,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  height: 496px;
+  height: 400px;
+  margin: 12px;
   min-width: 50%;
   flex-grow: 1;
 
   @media @small-screen {
     height: 200px;
+    margin: 0;
   }
 }
 
