Liter calculator screen small UI fix

--- a/app/views/liter-calculator.html
+++ b/app/views/liter-calculator.html
@@ -31,7 +31,9 @@
               <input type="radio" ng-model="parameterType" value="squareMeter"/>
               Metros cuadrados (m2)
             </div>
-            <input type="number" ng-model="squareMeter" placeholder="Metros cuadrados (m2)" class="text-input"/>
+            <div class="liter-calculator-input-wrapper">
+              <input type="number" ng-model="squareMeter" placeholder="Metros cuadrados (m2)" class="text-input"/>
+            </div>
           </div>
           <div class="liter-calculator-input">
             <div class="radio-button-input-wrapper">
