--- a/app/views/modal-templates/advice-2.html
+++ b/app/views/modal-templates/advice-2.html
@@ -4,17 +4,17 @@
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
       <span class="waring-icon"></span>
-      <p class="advice-modal-content-text">Qué Hacer:</p>
+      <p class="advice-modal-content-text"><i class="fa fa-check-circle-o" aria-hidden="true"></i><b>Qué Hacer:</b></p>
       <ul class="advice-modal-list">
-        <li>Asegúrese de que la superficie esté limpia y seca.</li>
-        <li>Elimine los pelos sueltos de los pinceles.</li>
-        <li>Preste atención a las instrucciones de aplicación dispuestas en la lata de pintura.</li>
+        <li>1. Asegúrese de que la superficie esté limpia y seca.</li>
+        <li>2. Elimine los pelos sueltos de los pinceles.</li>
+        <li>3. Preste atención a las instrucciones de aplicación dispuestas en la lata de pintura.</li>
         <li>
-          Cargue el pincel de manera  uniforme por inmersión sólo hasta la mitad de sus cerdas. Luego golpéelo contra el borde superior de la misma a fin de eliminar cualquier exceso.
+          4. Cargue el pincel de manera  uniforme por inmersión sólo hasta la mitad de sus cerdas. Luego golpéelo contra el borde superior de la misma a fin de eliminar cualquier exceso.
         </li>
-        <li>Aplique la pintura de manera uniforme y complemente con trazos suaves y cortos.</li>
-        <li>Pinte desde la superficie superior hacia la parte inferior.</li>
-        <li>En caso de pintar madera con lasures o barnices, deberá aplicar el pincel en la dirección de la vetas.</li>
+        <li>5. Aplique la pintura de manera uniforme y complemente con trazos suaves y cortos.</li>
+        <li>6. Pinte desde la superficie superior hacia la parte inferior.</li>
+        <li>7. En caso de pintar madera con lasures o barnices, deberá aplicar el pincel en la dirección de la vetas.</li>
       </ul>
     </div>
   </div>
@@ -22,13 +22,13 @@
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
       <span class="waring-icon"></span>
-      <p class="advice-modal-content-text">Qué no Hacer:</p>
+      <p class="advice-modal-content-text"><i class="fa fa-times-circle-o" aria-hidden="true"></i><b>Qué no Hacer:</b></p>
       <ul class="advice-modal-list">
-        <li>No mezcle la pintura con un pincel, use un palo plano u otro elemento similar.</li>
+        <li>1. No mezcle la pintura con un pincel, use un palo plano u otro elemento similar.</li>
         <li>
-          No deje pinceles en remojo en agua, solvente o pintura por períodos prolongados de tiempo, ya que los mismos se flexibilizaran en exceso.
+          2. No deje pinceles en remojo en agua, solvente o pintura por períodos prolongados de tiempo, ya que los mismos se flexibilizaran en exceso.
         </li>
-        <li>No utilice un pincel grande para pintar  elementos  pequeños o  estrechos, ya que  sobrecargara de material la superficie a pintar.</li>
+        <li>3. No utilice un pincel grande para pintar  elementos  pequeños o  estrechos, ya que  sobrecargara de material la superficie a pintar.</li>
       </ul>
     </div>
   </div>
