--- a/app/views/modal-templates/advice-4.html
+++ b/app/views/modal-templates/advice-4.html
@@ -2,7 +2,7 @@
   <h3 class="modal-content-title">Mantenimiento</h3>
 
   <div class="modal-content-paragraph">
-    Si bien las pinturas secan rápido,  tomará aproximadamente una semana para que sequen totalmente. Por ello, las superficies pintadas no deben ser lavadas antes del citado tiempo. Se recomienda dejar pasar 3 semanas de concluido el trabajo.
+    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Si bien las pinturas secan rápido,  tomará aproximadamente una semana para que sequen totalmente. Por ello, <b>las superficies pintadas no deben ser lavadas antes del citado tiempo</b>. Se recomienda dejar pasar 3 semanas de concluido el trabajo.
   </div>
 
   <div class="modal-content-paragraph">
@@ -17,7 +17,7 @@
     <li class="advice-modal-list-item">
       2. Utilice una solución de agua tibia limpia con detergente mediante un paño suave. En caso de que la mancha resulte difícil de limpiar, emplee un cepillo de cerdas suaves.
     </li>
-    
+
     <li class="advice-modal-list-item">
       3. Finalmente, enjuague el área limpiada y deje secar.
     </li>
