--- a/styles/less/advice.less
+++ b/styles/less/advice.less
@@ -45,16 +45,20 @@
 }
 
 .advice-modal-list {
-  padding-left: 48px;
-  
+  padding-left: 20px;
+
   li {
     display: block;
   }
 }
 
+.modal-content-subtitle {color: @c_grays_05;
+margin-top: 10px;
+margin-bottom: 0;}
+
 .advice-modal-application-order-list {
-  padding-left: 48px;
-  
+  padding-left: 20px;
+
   li {
     display: block;
   }
@@ -62,7 +66,7 @@
 
 .modal-content-tools-list {
   padding-left: 48px;
-  
+
   li {
     display: block;
   }
