--- a/styles/less/modal-content.less
+++ b/styles/less/modal-content.less
@@ -5,8 +5,9 @@
 }
 
 .modal-content-title {
-  margin: 24px;
-  text-align: right;
+  margin: 10px 24px 0 24px;
+  text-align: left;
+  color: @c_grays_05;
 
   @media @small-screen {
     font-size: 20px;
@@ -16,7 +17,9 @@
 }
 
 .modal-content-paragraph {
-  margin: 24px;
+  margin: 10px 24px;
+  font-weight: 100;
+  line-height: 24px;
 
   @media @small-screen {
     margin: 12px;
