--- a/styles/less/modal.less
+++ b/styles/less/modal.less
@@ -35,11 +35,11 @@
 .modal-window {
   display: flex;
   flex-direction: column;
-  height: 90%;
-  max-width: @viewport_width;
+  height: 98%;
+  //max-width: @viewport_width;
   position: relative;
   overflow: auto;
-  width: 100%;
+  width: 98%;
 
   @media @small-screen {
     height: 100%;
@@ -86,7 +86,14 @@
     color: @c_grays_04;
   }
 }
-
+.advice-modal-content-text {
+  i {margin-right: 5px;
+    font-size: 21px;}
+  span {font-style: italic;}
+}
+.advice-modal-content-section {border-bottom: 1px solid @c_grays_03;
+  &:last-child {border:0;}}
+.advice-modal-content {padding: 0 5%;}
 .modal-content-wrapper {
   background-color: @c_white;
   color: @c_grays_03;
@@ -107,7 +114,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 120px;
+  height: 40px;
   flex-shrink: 0;
 
   @media @small-screen {
@@ -118,6 +125,7 @@
 .modal-template-wrapper {
   overflow: auto;
   flex-grow: 1;
+  padding-top: 10px;
 }
 
 .modal-content-footer {
@@ -125,7 +133,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 80px;
+  height: 60px;
   flex-shrink: 0;
 
   @media @small-screen {
