--- a/app/views/modal-templates/advice-5.html
+++ b/app/views/modal-templates/advice-5.html
@@ -6,10 +6,12 @@
   </div>
 
   <div class="advice-modal-content-section">
+
     <div class="modal-content-paragraph">
       <h4 class="modal-content-subtitle">Cuarteado:</h4>
       <div class="advice-modal-content-text">¿QUÉ ES? Son quebraduras de la película de pintura.</div>
     </div>
+    <div class="imagen-representacion cuarteado"></div>
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
@@ -70,6 +72,7 @@
       <h4 class="modal-content-subtitle">Ampollado:</h4>
       <div class="advice-modal-content-text">¿QUE ES? Son “burbujas” redondeadas sobre la película de pintura.</div>
     </div>
+    <div class="imagen-representacion ampollado"></div>
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
@@ -115,6 +118,7 @@
       <h4 class="modal-content-subtitle">Tizado:</h4>
       <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la pintura, generalmente luego de una prolongada exposición a la intemperie.</div>
     </div>
+    <div class="imagen-representacion tizado"></div>
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
@@ -149,6 +153,7 @@
       <h4 class="modal-content-subtitle">Desprendimiento:</h4>
       <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la película de pintura. </div>
     </div>
+    <div class="imagen-representacion desprendimiento"></div>
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
@@ -189,6 +194,7 @@
       <h4 class="modal-content-subtitle">Arrugado:</h4>
       <div class="advice-modal-content-text">¿QUE ES? Son “arrugas” que surgen de la película de pintura.</div>
     </div>
+    <div class="imagen-representacion arrugado"></div>
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Causas</div>
