--- a/styles/less/modal-content.less
+++ b/styles/less/modal-content.less
@@ -3,6 +3,21 @@
 .modal-content-section {
   padding: 24px;
 }
+.imagen-representacion{
+  width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  border: 1px solid @c_grays_01;
+  margin: 0 24px;
+  &.cuarteado { background-image: url("../../assets/images/cuarteado.jpg");}
+  &.ampollado { background-image: url("../../assets/images/ampollado.jpg");}
+  &.tizado { background-image: url("../../assets/images/tizado.jpg");}
+  &.desprendimiento { background-image: url("../../assets/images/desprendimiento.jpg");}
+  &.arrugado { background-image: url("../../assets/images/arrugado.jpg");}
+
+}
 
 .modal-content-title {
   margin: 10px 24px 0 24px;
