--- a/styles/less/modal.less
+++ b/styles/less/modal.less
@@ -88,12 +88,13 @@
 }
 .advice-modal-content-text {
   i {margin-right: 5px;
-    font-size: 21px;}
+    font-size: 21px;
+  &.fa-info{ font-size: 16px;}}
   span {font-style: italic;}
 }
 .advice-modal-content-section {border-bottom: 1px solid @c_grays_03;
   &:last-child {border:0;}}
-.advice-modal-content {padding: 0 5%;}
+.advice-modal-content, .inpiration-modal-content {padding: 0 5%;}
 .modal-content-wrapper {
   background-color: @c_white;
   color: @c_grays_03;
@@ -215,6 +216,7 @@
 .inspiration-modal-color-box-title {
   font-weight: 700;
   margin-top: 12px;
+  color: @c_grays_06;
 }
 
 .inspiration-modal-color-box-text-wrapper {
