--- a/app/views/modal-templates/advice-6.html
+++ b/app/views/modal-templates/advice-6.html
@@ -2,36 +2,33 @@
   <h3 class="modal-content-title">Aplicación</h3>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">- Rellenar</h4>
+    <h4 class="modal-content-subtitle">1. Rellenar</h4>
     <div class="advice-modal-content-text">
       Las superficies dañadas pueden requerir ser rellenadas con Enduido Plástico al Agua Prima Facie° y luego lijadas, a fin de  proporcionar una superficie lisa y uniforme.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">- Limpiar</h4>
+    <h4 class="modal-content-subtitle">2. Limpiar</h4>
     <div class="advice-modal-content-text">
       La superficie debe estar limpia, seca y libre de cualquier suciedad. Por lo tanto, limpie la superficie eliminando todo resto de polvo, grasitud, manchas, etc.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">- Mezclar</h4>
+    <h4 class="modal-content-subtitle">3. Mezclar</h4>
     <div class="advice-modal-content-text">
-      La adecuada mezcla, antes del uso, es esencial para la consistencia del color correcto. Revuelva circularmente con alternancia de sentidos, usando una paleta plana hasta que los contenidos sean uniformes. Continúe agitando en intervalos regulares durante la aplicación. 
+      La adecuada mezcla, antes del uso, es esencial para la consistencia del color correcto. Revuelva circularmente con alternancia de sentidos, usando una paleta plana hasta que los contenidos sean uniformes. Continúe agitando en intervalos regulares durante la aplicación.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">- ¿Cómo pintar?</h4>
+    <h4 class="modal-content-subtitle">4. Pintar</h4>
     <div class="advice-modal-content-text">
       Normalmente se debe pintar de arriba hacia abajo.
     </div>
     <div class="advice-modal-content-text">
-      * Para superficies interiores:
-    </div>
-    <div class="advice-modal-content-text">
-      - Orden de pintado:
+      <i class="fa fa-info" aria-hidden="true"></i> Orden de pintado para superficies <b>interiores</b>:
     </div>
     <ul class="advice-modal-list">
       <li>Primera mano de techo.</li>
@@ -41,11 +38,9 @@
     </ul>
 
     <div class="advice-modal-content-text">
-      * Para superficies exteriores:
+    <i class="fa fa-info" aria-hidden="true"></i>Orden de pintado para superficies <b>exteriores</b>:
     </div>
-    <div class="advice-modal-content-text">
-      - Orden de pintado:
-    </div>
+
     <ul class="advice-modal-list">
       <li>Techo</li>
       <li>Balcones</li>
@@ -56,14 +51,14 @@
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">- Protección personal</h4>
+    <h4 class="modal-content-subtitle">5. Proteger</h4>
     <div class="advice-modal-content-text">
       Asegúrese de que el área esté bien ventilada. Use ropa adecuada, guantes y un barbijo cuando deba lijar. Asimismo, un barbijo también se recomienda cuando la aplicación de pinturas a base solvente se realiza en espacios confinados o si la ventilación es escasa.
     </div>
   </div>
 
   <div class="modal-content-paragraph">
-    <h4 class="modal-content-subtitle">* Clima</h4>
+    <h4 class="modal-content-subtitle"><i class="fa fa-info-circle" aria-hidden="true"></i> Clima</h4>
     <div class="advice-modal-content-text">
       Los días cálidos y secos con poco rocío o escarcha resultan las mejores condiciones climáticas para pintar. Pintar, nunca debe llevarse a cabo bajo condiciones de humedad. La Calefacción y una buena ventilación interior ayuda al secado de la pintura interior durante el clima frío o una humedad elevada. Evite pintar cuando la temperatura este por debajo de 5 ºC o por encima de 40 ºC.
     </div>
