--- a/styles/less/advice.less
+++ b/styles/less/advice.less
@@ -18,14 +18,6 @@
     padding: 24px 0;
   }
 
-  .title {
-    color: @c_white;
-    line-height: 121px;
-
-    @media @small-screen {
-      line-height: 50px;
-    }
-  }
 }
 
 .advice-buttons-wrapper {
@@ -41,7 +33,7 @@
 }
 
 .advice-modal-content-text {
-  margin: 12px 0;
+  margin: 0;
 }
 
 .advice-modal-list {
@@ -65,7 +57,7 @@ margin-bottom: 0;}
 }
 
 .modal-content-tools-list {
-  padding-left: 48px;
+  padding-left: 20px;
 
   li {
     display: block;
