--- a/styles/less/modal.less
+++ b/styles/less/modal.less
@@ -94,7 +94,7 @@
 }
 .advice-modal-content-section {border-bottom: 1px solid @c_grays_03;
   &:last-child {border:0;}}
-.advice-modal-content, .inpiration-modal-content {padding: 0 5%;}
+.advice-modal-content, .inpiration-modal-content, .contact-modal-content {padding: 0 5%;}
 .modal-content-wrapper {
   background-color: @c_white;
   color: @c_grays_03;
