--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -15,7 +15,10 @@
     text-align: center;
   }
 }
-
+.text {color: @c_grays_04;
+  text-align: center;
+  margin-top: 5px;
+font-size: 12px;}
 .products-buttons-wrapper {
   display: flex;
   flex-wrap: wrap;
