--- a/styles/less/modal-content.less
+++ b/styles/less/modal-content.less
@@ -1,5 +1,115 @@
 @import 'blocks.less';
+.imagen-contacto {
+  width: 60%;
+  height: 400px;
+  float: left;
+  background-image: @foot-background;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.contact-modal-content-section {
+  width: 40%;
+  float: left;
+  padding: 24px;
+.group 			  {
+  position:relative;
+  margin-bottom:45px;
+}
+input 				{
+  //font-size:18px;
+  padding:10px 10px 10px 5px;
+  display:block;
+  width:300px;
+  border:none;
+  border-bottom:1px solid @c_blue_01;
+}
+input:focus 		{ outline:none; }
 
+/* LABEL ======================================= */
+label 				 {
+
+  font-weight:normal;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+
+/* active state */
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color:@c_blue_01;
+}
+
+/* BOTTOM BARS ================================= */
+.bar 	{ position:relative; display:block; width:300px; }
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px;
+  width:0;
+  bottom:1px;
+  position:absolute;
+  background:@c_blue_01;
+  transition:0.2s ease all;
+  -moz-transition:0.2s ease all;
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%;
+}
+
+/* active state */
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.highlight {
+  position:absolute;
+  height:60%;
+  width:100px;
+  top:25%;
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+/* active state */
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+/* ANIMATIONS ================ */
+@-webkit-keyframes inputHighlighter {
+	from { background:@c_blue_01; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:@c_blue_01; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:@c_blue_01; }
+  to 	{ width:0; background:transparent; }
+}
+}
+
+
+
+
+
+
+.wapi-form-done, .wapi-form-fail {display: none;}
 .modal-content-section {
   padding: 24px;
 }
