agrego script para form

--- a/app/views/modal-templates/contacto-1.html
+++ b/app/views/modal-templates/contacto-1.html
@@ -36,4 +36,7 @@
   <div class="imagen-contacto"></div>
 
   <script type="text/javascript" src="http://waaws-api.herokuapp.com/cibel/browser.js"></script>
+  <script>
+        wapi.autoInitForms();
+  </script>
 </div>
