--- a/styles/less/modal-content.less
+++ b/styles/less/modal-content.less
@@ -7,11 +7,23 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media @medium-screen {
+    width: 30%;
+  }
+  @media @medium-screen {
+    display: none;
+  }
 }
 .contact-modal-content-section {
   width: 40%;
   float: left;
   padding: 24px;
+  @media @medium-screen {
+    width: 60%;
+  }
+  @media @medium-screen {
+    width: 100%;
+  }
 .group 			  {
   position:relative;
   margin-bottom:45px;
