contact show fix

--- a/app/views/modal-templates/contacto-1.html
+++ b/app/views/modal-templates/contacto-1.html
@@ -20,10 +20,10 @@
       </div>
           <button class="liter-calculator-button">Enviar tu consulta</button>
 
-          <div class="wapi-form-done" ng-show="submitted">
+          <div ng-show="submitted">
               Gracias por tu consulta. Nos comunicaremos con vos lo antes posible.
           </div>
-          <div class="wapi-form-fail" ng-show="fail">
+          <div ng-show="fail">
               Algo salió mal. Por favor vuelve a intentarlo.
           </div>
 
