Small change on liter calculator result text

--- a/app/views/liter-calculator.html
+++ b/app/views/liter-calculator.html
@@ -61,7 +61,7 @@
           <div class="liter-calculator-text">
             <span>Usted necesita</span>
             <span class="liter-calculator-result-number">{{ result | roundUp }}</span>
-            <span>{{ paintTypes[product.fields.tipo].meassureUnit }} de pintura ({{ paintTypes[product.fields.tipo].coats }} manos).</span>
+            <span>{{ paintTypes[product.fields.tipo].meassureUnit }} de pintura para dar {{ paintTypes[product.fields.tipo].coats }} manos.</span>
           </div>
         </div>
 
